Removes StringUtils as a dependency
Removes the need for StringUtils by using the String.isBlank() methods